# ECS

./: .gitignore  CMakeLists.txt  compile.sh
SparseArray/: CMakeLists.txt
SparseArray/src/: SparseArray.cpp
demo/: CMakeLists.txt  compile.sh
demo/components/: Velocity.hpp
demo/include/: project_tool.hpp
demo/include/components/: controlable.hpp  drawable.hpp  gravity.hpp  ig_cmpts.hpp  player.hpp  position.hpp  sprite.hpp  window.hpp
demo/include/scenes/: AScene.hpp  IScene.hpp  InGame.hpp
demo/include/systems/: event.hpp  gravity.hpp  ig_sys.hpp
demo/src/: main.cpp
demo/src/components/: drawable.cpp  sprite.cpp  window.cpp
demo/src/scenes/: InGame.cpp
demo/src/systems/: controle.cpp  draw.cpp  event.cpp  gravity.cpp  movement.cpp
include/: Entity.hpp  Registry.hpp  SparseArray.hpp  projectTools.hpp
include/components/: drawable.hpp  position.hpp  velocity.hpp
include/systems/: controle.hpp
include/tools/: SparseArray.hpp  Vector2.hpp  Vector3.hpp  numeric.hpp
maths/: CMakeLists.txt
maths/include/: Vector3.hpp
maths/src/: maths.cpp
src/: Registry.cpp  main.cpp
src/components/: position.cpp
